[gd_scene load_steps=27 format=3 uid="uid://dvvu2ls7inlev"]

[ext_resource type="Script" path="res://addons/Cubiix_Assets/Mods/TTSAsset/Assets/Scripts/Client/persistant_core.gd" id="1_avm5g"]
[ext_resource type="PackedScene" uid="uid://bb30770sajce6" path="res://addons/Cubiix_Assets/Mods/TTSAsset/Assets/Objects/Client/UI/version_image.tscn" id="2_j6tbw"]
[ext_resource type="PackedScene" uid="uid://bgl6owk1m1q4u" path="res://addons/Cubiix_Assets/Mods/TTSAsset/Assets/Objects/Client/UI/Dialogue.tscn" id="3_0531y"]
[ext_resource type="PackedScene" uid="uid://c2701u34x8dm0" path="res://addons/Cubiix_Assets/Mods/TTSAsset/Assets/Objects/Client/UI/hexii_tablet_ui_v2.tscn" id="4_yn8bv"]
[ext_resource type="PackedScene" uid="uid://cufaqwnfhx7e5" path="res://addons/Cubiix_Assets/Mods/TTSAsset/Assets/Objects/Client/UI/hexii_phone_ui_v2.tscn" id="5_h76e0"]
[ext_resource type="Texture2D" uid="uid://3y0k7m58gqtr" path="res://addons/Cubiix_Assets/Mods/TTSAsset/Assets/Textures/UI/Map_Previews/Hexstaria_MK2.png" id="7_h2oss"]
[ext_resource type="Texture2D" uid="uid://bxbehfpnollp1" path="res://addons/Cubiix_Assets/Mods/TTSAsset/Assets/Textures/UI/Other/Loading.png" id="11_jhpuk"]
[ext_resource type="Script" path="res://addons/Cubiix_Assets/Mods/TTSAsset/Assets/Scripts/Client/Map/camera_settings.gd" id="11_v4hbs"]
[ext_resource type="FontFile" uid="uid://d4abxqqufataa" path="res://addons/Cubiix_Assets/Mods/TTSAsset/Assets/Fonts/Courier-Prime-Code/Courier Prime Code.ttf" id="13_7phac"]
[ext_resource type="Texture2D" uid="uid://b2j135lyefuy1" path="res://addons/Cubiix_Assets/Mods/TTSAsset/Assets/Textures/UI/Other/Shiftlock.png" id="14_sqbso"]
[ext_resource type="PackedScene" uid="uid://co7v5bt8xi81" path="res://addons/Cubiix_Assets/Scenes/Cubiix_Character.tscn" id="15_rfthv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f0sve"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_41tnh"]
resource_name = "Loading"
length = 3.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D2:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D3:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.8, 0.9, 1, 1.1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D6:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1.2, 1.3, 1.4, 1.5, 1.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D9:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(1.6, 1.7, 1.8, 1.9, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Sprite2D8:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(2, 2.1, 2.2, 2.3, 2.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Sprite2D7:frame")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(2.4, 2.5, 2.6, 2.7, 2.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 0]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Sprite2D4:frame")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 2.8, 2.9, 3, 3.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_4ltjv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ima1k"]
_data = {
"Loading": SubResource("Animation_41tnh"),
"RESET": SubResource("Animation_4ltjv")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ae5f8"]
animation = &"Loading"

[sub_resource type="Gradient" id="Gradient_0si2u"]
offsets = PackedFloat32Array(0.0736196, 0.0858896, 0.153374, 0.815951, 0.91411, 1)
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_uy3ag"]
gradient = SubResource("Gradient_0si2u")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_jvpvl"]
texture = SubResource("GradientTexture1D_uy3ag")

[sub_resource type="Gradient" id="Gradient_66wa0"]
offsets = PackedFloat32Array(0.2, 0.5, 0.8)
colors = PackedColorArray(0, 0, 0, 1, 0, 0.435294, 0.498039, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_vqmes"]
gradient = SubResource("Gradient_66wa0")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_jdtv5"]
texture = SubResource("GradientTexture1D_vqmes")

[sub_resource type="Animation" id="Animation_n4ghk"]
resource_name = "FadeOut"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.566667),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.466667, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, true, false]
}

[sub_resource type="Animation" id="Animation_e2t24"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0333333),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qifgu"]
_data = {
"FadeOut": SubResource("Animation_n4ghk"),
"RESET": SubResource("Animation_e2t24")
}

[sub_resource type="SphereShape3D" id="SphereShape3D_sqaxx"]
radius = 0.2

[node name="Persistant" type="Node"]
script = ExtResource("1_avm5g")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VersionImage" parent="CanvasLayer" instance=ExtResource("2_j6tbw")]
anchors_preset = 0
anchor_top = 0.0
anchor_bottom = 0.0
offset_left = 4.0
offset_top = 4.0
offset_right = 112.0
offset_bottom = 44.0
grow_vertical = 1

[node name="Dialogue" parent="CanvasLayer" instance=ExtResource("3_0531y")]
visible = false

[node name="Draggable_UI" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Hexii_Tablet_UI" parent="CanvasLayer/Draggable_UI" instance=ExtResource("4_yn8bv")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="DragArea" parent="CanvasLayer/Draggable_UI/Hexii_Tablet_UI" index="0"]
offset_left = -119.0
offset_top = -233.0
offset_right = 360.0
offset_bottom = 255.0

[node name="Hexii_Phone_UI" parent="CanvasLayer/Draggable_UI" instance=ExtResource("5_h76e0")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="DragArea" parent="CanvasLayer/Draggable_UI/Hexii_Phone_UI" index="0"]
offset_left = -392.0
offset_top = 85.0
offset_right = -186.0
offset_bottom = 423.0

[node name="Transitioner" type="Panel" parent="CanvasLayer"]
visible = false
z_index = 4096
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_f0sve")

[node name="Control" type="Control" parent="CanvasLayer/Transitioner"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/Transitioner/Control"]
texture_filter = 1
position = Vector2(18, 18)
texture = ExtResource("11_jhpuk")
hframes = 4
frame = 1

[node name="Sprite2D2" type="Sprite2D" parent="CanvasLayer/Transitioner/Control"]
texture_filter = 1
position = Vector2(-11, 18)
texture = ExtResource("11_jhpuk")
hframes = 4

[node name="Sprite2D3" type="Sprite2D" parent="CanvasLayer/Transitioner/Control"]
texture_filter = 1
position = Vector2(-40, 18)
rotation = 1.5708
texture = ExtResource("11_jhpuk")
hframes = 4

[node name="Sprite2D4" type="Sprite2D" parent="CanvasLayer/Transitioner/Control"]
texture_filter = 1
position = Vector2(18, -11)
rotation = -1.5708
texture = ExtResource("11_jhpuk")
hframes = 4
frame = 2

[node name="Sprite2D6" type="Sprite2D" parent="CanvasLayer/Transitioner/Control"]
texture_filter = 1
position = Vector2(-40, -11)
rotation = 1.5708
texture = ExtResource("11_jhpuk")
hframes = 4

[node name="Sprite2D7" type="Sprite2D" parent="CanvasLayer/Transitioner/Control"]
texture_filter = 1
position = Vector2(18, -40)
rotation = 4.71239
texture = ExtResource("11_jhpuk")
hframes = 4

[node name="Sprite2D8" type="Sprite2D" parent="CanvasLayer/Transitioner/Control"]
texture_filter = 1
position = Vector2(-11, -40)
rotation = 3.14159
texture = ExtResource("11_jhpuk")
hframes = 4

[node name="Sprite2D9" type="Sprite2D" parent="CanvasLayer/Transitioner/Control"]
texture_filter = 1
position = Vector2(-40, -40)
rotation = 3.14159
texture = ExtResource("11_jhpuk")
hframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/Transitioner/Control"]
libraries = {
"": SubResource("AnimationLibrary_ima1k")
}

[node name="AnimationTree" type="AnimationTree" parent="CanvasLayer/Transitioner/Control/AnimationPlayer"]
root_node = NodePath("../..")
tree_root = SubResource("AnimationNodeAnimation_ae5f8")
anim_player = NodePath("..")

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Transitioner"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -129.0
offset_bottom = 66.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_h2oss")
expand_mode = 3
stretch_mode = 5

[node name="Panel" type="Panel" parent="CanvasLayer/Transitioner/TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_jvpvl")

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/Transitioner/TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 205.0
offset_bottom = 70.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.373)
theme_override_constants/outline_size = 0
theme_override_constants/shadow_offset_y = 2
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_outline_size = 0
theme_override_constants/line_separation = 3
theme_override_fonts/normal_font = ExtResource("13_7phac")
theme_override_fonts/bold_font = ExtResource("13_7phac")
theme_override_styles/normal = SubResource("StyleBoxTexture_jdtv5")
bbcode_enabled = true
text = "[center][font_size=40] [b]Hexstaria[/b][/font_size]
  Home of the Cubiix"
fit_content = true
scroll_active = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/Transitioner"]
libraries = {
"": SubResource("AnimationLibrary_qifgu")
}

[node name="CrossHair" type="TextureRect" parent="CanvasLayer"]
visible = false
texture_filter = 4
offset_left = 375.0
offset_top = 289.0
offset_right = 435.0
offset_bottom = 349.0
texture = ExtResource("14_sqbso")
expand_mode = 5

[node name="Node3D" type="Node3D" parent="."]

[node name="Player" parent="Node3D" groups=["Player"] instance=ExtResource("15_rfthv")]
collision_layer = 2
collision_mask = 2
Load_Script_ID = Array[String](["TTSAssets/Character_Controller", "TTSAssets/Camera_Controller"])
Load_Script_Passthrough = Array[Dictionary]([{}, {}])
Animation_Path = "TTSAssets/TTS_Player_Anims"
Assets_Path = "/root/Main_Scene/CoreLoader/AssetData"
Character_String = "{\"B1\":\"000000\",\"B1E\":\"000000\",\"B1ES\":1,\"B1M\":0.46,\"B1R\":0.45,\"B2\":\"906eb8\",\"B2E\":\"385651\",\"B2ES\":0.2,\"B2M\":0,\"B2R\":0.9,\"B3\":\"e879ee\",\"B3E\":\"e879ee\",\"B3ES\":1,\"B3M\":0,\"B3R\":1,\"B4\":\"e879ee\",\"B4E\":\"e879ee\",\"B4ES\":1,\"B4M\":0,\"B4R\":1,\"EA\":\"CoreAssets/Ears_Cat\",\"EX\":\"CoreAssets/Extra\",\"EY\":\"CoreAssets/Eyes_Default\",\"N\":\"\",\"PA\":\"\",\"PB\":\"\",\"PC\":\"\",\"S\":1,\"T\":\"CoreAssets/Tails_Cat\",\"W\":\"CoreAssets/Wings_Angel\"}"
Accessory_String = "{
\"Back\":\"TTSAssets/LGBT_Cape\",
\"Head\":\"TTSAssets/Witch_Hat\",
\"Chest\":\"TTSAssets/LGBT_Bandanna\"
}"

[node name="Core_Follow" type="Node3D" parent="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8.2, 0, 0)

[node name="Rot_Y" type="Node3D" parent="Node3D/Core_Follow"]

[node name="Rot_X" type="Node3D" parent="Node3D/Core_Follow/Rot_Y"]

[node name="Rot_Z" type="SpringArm3D" parent="Node3D/Core_Follow/Rot_Y/Rot_X"]
collision_mask = 128
shape = SubResource("SphereShape3D_sqaxx")
spring_length = -4.0
margin = 0.2

[node name="Camera3D" type="Camera3D" parent="Node3D/Core_Follow/Rot_Y/Rot_X/Rot_Z" groups=["PlayerCamera"]]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -2.24216e-07, 0, -2.56473)
current = true

[node name="Node" type="Node" parent="Node3D/Core_Follow/Rot_Y/Rot_X/Rot_Z/Camera3D"]
script = ExtResource("11_v4hbs")

[node name="Audio" type="Node3D" parent="Node3D"]

[node name="Network_Players" type="Node3D" parent="Node3D"]

[node name="Effects" type="Node3D" parent="Node3D"]

[editable path="CanvasLayer/Draggable_UI/Hexii_Tablet_UI"]
[editable path="CanvasLayer/Draggable_UI/Hexii_Tablet_UI/DragArea/Wallpaper_Backing/Transition_Controller/Settings"]
[editable path="CanvasLayer/Draggable_UI/Hexii_Tablet_UI/DragArea/Wallpaper_Backing/Transition_Controller/Offline/Moon/TextureRect/Control/SubViewportContainer/SubViewport/Node3D"]
[editable path="CanvasLayer/Draggable_UI/Hexii_Phone_UI"]
